GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/Salesforce_Support_Request__c.object-meta.xml
<CustomObject>
    <description>Salesforce and Marketing Cloud Support Request management</description>
    <label>Salesforce Support Request</label>
    <nameField>
        <displayFormat>SFDC-{0000}</displayFormat>
        <label>Salesforce Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Support Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>