GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Advisors__c.field-meta.xml
<CustomField>
    <fullName>Advisors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisors</label>
    <type>Checkbox</type>
</CustomField>