GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Any_Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Comments__c</fullName>
    <label>Any Other Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>