GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Article_name__c.field-meta.xml
<CustomField>
    <fullName>Article_name__c</fullName>
    <label>Relevant link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>