GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Associated_Jira_Id__c.field-meta.xml
<CustomField>
    <fullName>Associated_Jira_Id__c</fullName>
    <label>Associated Jira Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>