GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Both__c.field-meta.xml
<CustomField>
    <fullName>Both__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both</label>
    <type>Checkbox</type>
</CustomField>