GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Carrier_formula__c.field-meta.xml
<CustomField>
    <fullName>Carrier_formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(Related_Case__c)),TEXT(Related_Case__r.Carrier__c),&quot;No case selected&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>