GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <label>Change Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>