GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <label>Change Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>