GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who set the ticket Status as Closed or Rejected</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closers</relationshipName>
    <type>Lookup</type>
</CustomField>