GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Re-directed to IS Service Desk</fullName>
            </value>
            <value>
                <fullName>Re-directed to App Support</fullName>
            </value>
            <value>
                <fullName>Re-directed to EBSC</fullName>
            </value>
            <value>
                <fullName>Re-directed to IBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>