GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>