GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Content_is_missing__c.field-meta.xml
<CustomField>
    <fullName>Content_is_missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content is missing</label>
    <type>Checkbox</type>
</CustomField>