GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Content_is_no_longer_required__c.field-meta.xml
<CustomField>
    <fullName>Content_is_no_longer_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content is no longer required</label>
    <type>Checkbox</type>
</CustomField>