GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Cumulative_Request_Age__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Request_Age__c</fullName>
    <description>To hold Request Age value until request is reopened</description>
    <label>Cumulative Request Age</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>