GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customers</label>
    <type>Checkbox</type>
</CustomField>