GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Date_Time_ReOpened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_ReOpened__c</fullName>
    <description>Support field required for proper Request Age calculation</description>
    <label>Date/Time ReOpened</label>
    <type>DateTime</type>
</CustomField>