GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <defaultValue>false</defaultValue>
    <label>English</label>
    <type>Checkbox</type>
</CustomField>