GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Exchanges__c.field-meta.xml
<CustomField>
    <fullName>Exchanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchanges</label>
    <type>Checkbox</type>
</CustomField>