GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/French__c.field-meta.xml
<CustomField>
    <fullName>French__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French</label>
    <type>Checkbox</type>
</CustomField>