GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/German__c.field-meta.xml
<CustomField>
    <fullName>German__c</fullName>
    <defaultValue>false</defaultValue>
    <label>German</label>
    <type>Checkbox</type>
</CustomField>