GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groups</label>
    <type>Checkbox</type>
</CustomField>