GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Impact_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Change__c</fullName>
    <label>Impact of Change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>