GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Impacted_Application__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Application__c</fullName>
    <label>Impacted Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>ICLP</fullName>
            </value>
            <value>
                <fullName>Social Studio</fullName>
            </value>
            <value>
                <fullName>Stella Surveys</fullName>
            </value>
            <value>
                <fullName>Simpplr</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>Vonage</fullName>
            </value>
            <value>
                <fullName>Starlight</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Website or App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>