GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Impacts_on_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Impacts_on_Advisors__c</fullName>
    <label>Impact on Advisors ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can&#39;t complete a Task</fullName>
            </value>
            <value>
                <fullName>Slows me down</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>