GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Impacts_on_Customers__c.field-meta.xml
<CustomField>
    <fullName>Impacts_on_Customers__c</fullName>
    <label>Impact on Customers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can&apos;t complete a Task</fullName>
            </value>
            <value>
                <fullName>Slows them down</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>Confusing Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>