GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Is_there_a_knowledge_article_about_this__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_knowledge_article_about_this__c</fullName>
    <label>Is there a Knowledge article about this?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>