GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Other_2__c.field-meta.xml
<CustomField>
    <fullName>Other_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>