GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Other_4__c.field-meta.xml
<CustomField>
    <fullName>Other_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>