GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Outcome_Category__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Category__c</fullName>
    <label>Outcome Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training/best practice advised</fullName>
            </value>
            <value>
                <fullName>System Configuration</fullName>
            </value>
            <value>
                <fullName>Record/Data Update</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>Investigation/Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>