GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/PNR_s__c.field-meta.xml
<CustomField>
    <fullName>PNR_s__c</fullName>
    <label>PNR(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>