GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>CASE(Priority__c,
&quot;High&quot;   ,Image(&quot;/servlet/servlet.FileDownload?file=&quot; + $Setup.Images__c.High_Priority_Icon__c ,&quot;High&quot; ,20,20),
&quot;Medium&quot; ,Image(&quot;/servlet/servlet.FileDownload?file=&quot; + $Setup.Images__c.Medium_Priority_Icon__c ,&quot;Medium&quot; ,20,20),
&quot;Low&quot;    ,Image(&quot;/servlet/servlet.FileDownload?file=&quot; + $Setup.Images__c.Low_Priority_Icon__c ,&quot;Low&quot; ,20,20),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>