GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Proposed_Action__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Action__c</fullName>
    <label>Proposed Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>