GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Reduces_confidence_in_what_I_am_doing__c.field-meta.xml
<CustomField>
    <fullName>Reduces_confidence_in_what_I_am_doing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduces confidence in what I am doing</label>
    <type>Checkbox</type>
</CustomField>