GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Refunds__c.field-meta.xml
<CustomField>
    <fullName>Refunds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refunds</label>
    <type>Checkbox</type>
</CustomField>