GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Relevant_Info__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Info__c</fullName>
    <label>Relevant Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Information Missing</fullName>
            </value>
            <value>
                <fullName>Information Unclear</fullName>
            </value>
            <value>
                <fullName>Information Out of Date</fullName>
            </value>
            <value>
                <fullName>Broken Link</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Something Else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>