GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Remove_a_knowledge_article__c.field-meta.xml
<CustomField>
    <fullName>Remove_a_knowledge_article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove a knowledge article</label>
    <type>Checkbox</type>
</CustomField>