GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Age__c.field-meta.xml
<CustomField>
    <fullName>Request_Age__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status__c, &quot;Closed&quot;),ISPICKVAL(Status__c, &quot;Rejected&quot;)), Cumulative_Request_Age__c,  
   IF(ISBLANK(Date_Time_ReOpened__c), NOW() - Date_Time_Opened__c, NOW() - Date_Time_ReOpened__c + Cumulative_Request_Age__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>