GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Age_Days__c</fullName>
    <formula>TEXT(FLOOR(Request_Age__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age Days</label>
    <type>Text</type>
</CustomField>