GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Age_Hours_And_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Request_Age_Hours_And_Minutes__c</fullName>
    <formula>TEXT(FLOOR(Request_Age__c * 24)) &amp; &quot; hrs &quot; &amp; TEXT(ROUND((Request_Age__c * 24 - FLOOR(Request_Age__c * 24)) * 60, 0)) &amp; &quot; mins&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age Hours And Minutes</label>
    <type>Text</type>
</CustomField>