GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>