GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <description>Name of the requester either populated from related user record or from fromName field on InboundEmail object</description>
    <label>Requester Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>