GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>IF( TEXT(Status__c) = &apos;New&apos;,
     (IF((NOW() -  CreatedDate) &lt;4 ,  
          IMAGE(&apos;/resource/FlagGreen2&apos;, &apos;Green&apos;, 32, 32) , 
          (IF((NOW() -  CreatedDate) &lt;8 , 
               IMAGE(&apos;/resource/FlagYellow&apos;, &apos;Yellow&apos;, 32, 32), 
               IMAGE(&apos;/resource/FlagRed&apos;, &apos;Red&apos;, 32, 32) 
          ))
     )) ,
     &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>