GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Slows_me_down__c.field-meta.xml
<CustomField>
    <fullName>Slows_me_down__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slows me down</label>
    <type>Checkbox</type>
</CustomField>