GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>In progress2</fullName>
            </value>
            <value>
                <fullName>Referred to Requester</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Under Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Delta Freeze</fullName>
            </value>
            <value>
                <fullName>Pending Internal Information</fullName>
            </value>
            <value>
                <fullName>Pending Team Resource</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected - other</fullName>
            </value>
            <value>
                <fullName>Rejected - request inaccurate</fullName>
            </value>
            <value>
                <fullName>Rejected - already exists</fullName>
            </value>
            <value>
                <fullName>Rejected - duplicate</fullName>
            </value>
            <value>
                <fullName>Rejected - inaccurate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>