GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Status_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Status_Tracker__c</fullName>
    <label>Status Tracker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>