GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Stops_me_from_doing_something__c.field-meta.xml
<CustomField>
    <fullName>Stops_me_from_doing_something__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stops me from doing something</label>
    <type>Checkbox</type>
</CustomField>