GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Ticket Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>