GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Supporting_Information__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Information__c</fullName>
    <label>Supporting Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>