GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Test_Gearset_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Gearset_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Gearset Field</label>
    <type>Checkbox</type>
</CustomField>