GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/ThreadID__c.field-meta.xml
<CustomField>
    <fullName>ThreadID__c</fullName>
    <formula>&quot;{&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;}&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ThreadID</label>
    <type>Text</type>
</CustomField>