GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Bug Request</fullName>
            </value>
            <value>
                <fullName>New Issue</fullName>
            </value>
            <value>
                <fullName>Already Flagged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>