GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Was_this_addressed_on_dates_in_teams__c.field-meta.xml
<CustomField>
    <fullName>Was_this_addressed_on_dates_in_teams__c</fullName>
    <label>Issue raised on Customer Care channel ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>