GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/What_was_I_trying_to_do__c.field-meta.xml
<CustomField>
    <fullName>What_was_I_trying_to_do__c</fullName>
    <label>What was I trying to do?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>