GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/fields/Who_does_it_Impact__c.field-meta.xml
<CustomField>
    <fullName>Who_does_it_Impact__c</fullName>
    <label>Who does it Impact?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>