GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>To report something is broken</description>
    <label>Bug</label>
</RecordType>