GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/recordTypes/Business_Improvement_Process.recordType-meta.xml
<RecordType>
    <fullName>Business_Improvement_Process</fullName>
    <active>false</active>
    <description>Used are by the EBSC Team for Issue Tracking</description>
    <label>Business Improvement Process</label>
</RecordType>