GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/recordTypes/Improvement.recordType-meta.xml
<RecordType>
    <fullName>Improvement</fullName>
    <active>true</active>
    <description>For all feedback including on the website and FAQ</description>
    <label>Improvement</label>
</RecordType>