GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/recordTypes/Knowledge.recordType-meta.xml
<RecordType>
    <fullName>Knowledge</fullName>
    <active>true</active>
    <description>To raise requests for additions, amendments, and removals for knowledge management</description>
    <label>Knowledge</label>
</RecordType>