GearsetPOC/force-app/main/default/objects/Salesforce_Support_Request__c/recordTypes/Salesforce_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Change_Request</fullName>
    <active>true</active>
    <description>Salesforce Change Request</description>
    <label>Salesforce Change Request</label>
</RecordType>